2005-12-08 Braden McDaniel  <braden@endoframe.com>

	Added sfcolorrgba, mfbool, mfcolorrgba, and mfimage field_value
	types.  Added MFBool support to the Java and JavaScript
	interfaces.  From Andrew Grieve <sgrieve@users.sourceforge.net>

	* java/Makefile.am (CLASSES): Added vrml/field/MFBool.class,
	vrml/field/ConstMFBool.class.
	(JNI_HFILES): Added vrml_field_MFBool.h, vrml_field_ConstMFBool.h.
	(vrml_field_MFBool.h): Added rule.
	(vrml_field_ConstMFBool.h): Added rule.
	* java/vrml/field/ConstMFBool.java: Added file.
	* java/vrml/field/MFBool.java: Added file.
	* java/vrml/field/Makefile.am (JAVA_FILES): Added MFBool.java and
	ConstMFBool.java.
	* src/libopenvrml/openvrml/ScriptJDK.cpp: Include
	vrml_field_MFBool.h and vrml_field_ConstMFBool.h.
	(ftn): Added "MFBool".
	(newField): Added case for mfbool.
	(Java_vrml_field_ConstMFBool_CreateObject): Added function
	definition.
	(Java_vrml_field_ConstMFBool_getSize): Added function definition.
	(Java_vrml_field_ConstMFBool_getValue): Added function definition.
	(Java_vrml_field_ConstMFBool_get1Value): Added function
	definition.
	(Java_vrml_field_ConstMFBool_toString): Added function definition.
	(Java_vrml_field_MFBool_CreateObject): Added function definition.
	(Java_vrml_field_MFBool_getSize): Added function definition.
	(Java_vrml_field_MFBool_clear): Added function definition.
	(Java_vrml_field_MFBool_delete): Added function definition.
	(Java_vrml_field_MFBool_getValue): Added function definition.
	(Java_vrml_field_MFBool_get1Value): Added function definition.
	(Java_vrml_field_MFBool_setValue__I_3F): Added function
	definition.
	(Java_vrml_field_MFBool_setValue__Lvrml_field_MFBool_2): Added
	function definition.
	(Java_vrml_field_MFBool_setValue__Lvrml_field_ConstMFBool_2):
	Added function definition.
	(Java_vrml_field_MFBool_set1Value__IF): Added function definition.
	(Java_vrml_field_MFBool_set1Value__ILvrml_field_ConstSFBool_2):
	Added function definition.